--- a/samples/_css/autocomplete.css
+++ b/samples/_css/autocomplete.css
@@ -1,3 +1,7 @@
+/*
+downloaded from https://www.w3schools.com/howto/howto_js_autocomplete.asp
+then adapted for animCJK project
+*/
 .autocomplete {
 	box-sizing:border-box;
 	position:relative;
