--- a/samples/_css/autocomplete.css
+++ b/samples/_css/autocomplete.css
@@ -17,10 +17,11 @@ then adapted for animCJK project
 	top:100%;
 	left:0;
 	right:0;
-	max-height:25em;
+	max-height:19em;
 	overflow:auto;
 }
 .autocomplete-items div {
+	font-size:1.5em;
 	box-sizing:border-box;
 	padding:0.5em;
 	cursor:pointer;
