--- a/samples/_css/withSelector.css
+++ b/samples/_css/withSelector.css
@@ -34,13 +34,20 @@ button[name="run"]
 }
 .charListSelector h2
 {
-	border-left:0.375em solid #c00;
-	padding-left: 0.375em;
+	margin:0.5rem 0;
+	border-left:0.5rem solid #c00;
+	padding:0 0 0 0.75rem;
+}
+.charListSelector summary
+{
+	margin:0;
+	padding:0;
 }
 .charListSelector h3
 {
-	display:inline-block;
-	margin:0 0 0 0.25em;
+	display:inline;
+	margin:0;
+	padding:0.5rem;
 }
 .charListSelector button
 {
